src/blobdash/static/main.css
@layer reset {
    /*
        Josh's Custom CSS Reset
        https://www.joshwcomeau.com/css/custom-css-reset/
    */

    *,
    *::before,
    *::after {
        box-sizing: border-box;
    }

    * {
        margin: 0;
        line-height: calc(1em + 0.5rem);
    }

    body {
        -webkit-font-smoothing: antialiased;
    }

    img,
    picture,
    video,
    canvas,
    svg {
        display: block;
        max-width: 100%;
    }

    input,
    button,
    textarea,
    select {
        font: inherit;
    }

    p,
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        overflow-wrap: break-word;
    }

    p {
        text-wrap: pretty;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        text-wrap: balance;
    }

    #root,
    #__next {
        isolation: isolate;
    }
}

@layer inter {
    :root {
        font-family: Inter, sans-serif;

        /* fix for Chrome */
        font-feature-settings: 'liga' 1, 'calt' 1;
    }

    @supports (font-variation-settings: normal) {
        :root {
            font-family: InterVariable, sans-serif;
        }
    }
}

@layer variables {
    :root {
        --color-accent: #ffc95c;
        --radius: 12px;

        --color-bg: #f4f4f5;
        --color-fg: #18181b;
    }

    @media (prefers-color-scheme: dark) {
        :root {
            --color-bg: #09090b;
            --color-fg: #f4f4f5;
            --color-muted-1: #18181b;
            --color-muted-2: #27272a;
            --color-muted-3: #3f3f46;
            --color-muted-4: #52525b;
        }
    }
}


body {
    background-color: var(--color-bg);
    color: var(--color-fg);

    height: 100dvh;

    display: flex;
    flex-direction: column;

    @media (width >=650px) {
        flex-direction: row;
    }
}

#menu {
    display: flex;
    background-color: var(--color-muted-1);
    border-inline-end: 1px solid var(--color-muted-2);
    flex: none;

    /* Menu is a horizontal, fixed height menubar on mobile  */
    @media (width < 650px) {
        height: 3rem;
        padding: 0.25rem;
    }

    /* Menu is a vertical, fixed width sidebar on desktop */
    @media (width >=650px) {
        flex-direction: column;
        width: 15rem;
        min-width: fit-content;
        padding: 0.5rem;
    }

    * {
        /*  Setting `line-height` to `1` will mean that the actual height of the element is the same
            as its `font-size`. Since the menu is UI, not body text, this makes more sense, and it
            allows us to set precise heights for one-line text elements using `font-size`.
         */
        line-height: 1;
    }

    h1 {
        display: flex;
        justify-content: center;
        gap: 0.25rem;
        
        img {
            height: 2.5rem;
        }
        
        span {
            color: var(--color-accent);
            font-weight: bolder;
            font-size: 2.5rem;

            @media (width < 650px) {
                /* Mobile doesn't have space for the title, so we just show the logo. */
                display: none;
            }

        }
    }

    .dashdot {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        margin-block: 2rem;
    
        @media (width < 650px) {
            display: none;
        }

        section {
            display: flex;
            flex-direction: column;
            gap: 0.5rem;

            h3 {
                font-weight: 500;
                margin-inline-start: 0.5rem;
            }
        }
    }

    .user {
        @media (width < 650px) {
            /* Icon before name */
            flex-direction: row;
        }

        @media (width >=650px) {
            /* Fill width of sidebar */
            width: 100%;

            /* Name before icon */
            flex-direction: row-reverse;
            justify-content: start;
        }

        height: 2.5rem;
        padding: 0.5rem 0.75rem;
        display: flex;
        gap: 0.5rem;
        
        background-color: var(--color-muted-2);
        border: solid 1px var(--color-muted-3);
        border-radius: var(--radius);
        
        align-self: center;
        margin-inline-start: auto;
        margin-block-start: auto;
        
        
        svg {
            height: 1.5rem;
            align-self: center;
        }

        span {
            font-size: 1rem;
            align-self: center;
            font-weight: 600;
        }


    }

    .about {
        margin: 0.75rem 0.25rem 0.25rem;
        display: flex;
        justify-content: space-between;
        font-size: 0.65rem;
        color: var(--color-muted-4);

        a {
            color: inherit;
            font-weight: bolder;
            text-decoration: underline solid 2px var(--color-muted-3);
        }

        @media (width < 650px) {
            /* Don't display on mobile, not enough space */
            /* TODO: Add to dropdown on mobile */
            display: none;
        }
    }

}

main {
    display: flex;

    @media (width < 650px) {
        flex-flow: column nowrap;
        align-items: center;
    }
    @media (width >= 650px) {
        flex-flow: row wrap;
    }
    
    align-content: start;
    margin: 1.5rem;
    gap: 1.5rem;

    a {
        text-decoration: none;
        color: inherit;

        display: grid;
        grid-template:
            "icon   name" auto
            "icon   desc" auto
            /6.875rem   auto;

        height: 10rem;
        min-width: fit-content;
        width: 25rem;
        max-width: 100%;

        border: 1px solid var(--color-muted-1);
        border-radius: var(--radius);
        padding: 1.5rem;
        column-gap: 1.5rem;

        transition:
            background-color 100ms,
            border-color 100ms;

        &:hover {
            background-color: var(--color-muted-1);
            border-color: var(--color-muted-2);
        }

        img {
            grid-area: icon;
            height: 100%;
            align-self: center;
        }
        h3 {
            grid-area: name;
            align-self: end;
            font-size: 3rem;
            font-weight: 700;
            display: inline;
        
            span {
                font-size: 1.5rem;
                grid-area: name;
                display: inline;
                line-height: 1;
                color: var(--color-muted-3);

                @media (width < 650px) {
                    display: none;
                }
            }
        }
        p {
            grid-area: desc;
        }

    }
}

